syntax = "proto3";

option csharp_namespace = "Nextodon.Grpc";

message DefaultPaginationParameters
{
    // Return results older than this ID.
    optional string max_id = 1;

    // Return results newer than this ID.
    optional string since_id = 2;
    
    // Return results immediately newer than this ID
    optional string min_id = 3;
    
    // Maximum number of results to return. Defaults to 15 notifications. Max 30 notifications.
    optional uint32 limit = 4;
}
