syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Nextodon.Grpc";


message FilterV1
{
    string id = 1;
    string phrase = 2;
    repeated string context = 3;
    bool whole_word = 4;
    google.protobuf.Timestamp expires_at = 5;
    bool irreversible = 6;
}

message FiltersV1
{
    repeated FilterV1 data = 1;
}

message FilterResult
{
    repeated string keywordMatches = 1;
}